[package]
name = "teach-rust-00-intro"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
sycamore = { git = "https://github.com/sycamore-rs/sycamore" }
log = "0.4.17"
wasm-bindgen = "0.2.83"
wasm-logger = "0.2.0"
gloo = "0.8.0"
nalgebra = "*"

[dependencies.web-sys]
version = "0.3.60"
features = [
    "CanvasRenderingContext2d",
    "DomRect",
    "HtmlCanvasElement",
    "HtmlDivElement",
    "HtmlElement",
    "KeyboardEvent",
    "MouseScrollEvent"
]